--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script defer src="./main.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>PASTELITO ROJO</title>
+    <title>PASTELITO ROJO 2</title>
   </head>
   <body>
     <div class="container-fluid">
